Added compile instructions for Java 11